- $quickdraw has had the winning multiplier reduced to 1.70x your bet (was 1.80x)
- $quickdraw critical hit chance has been reduced:
    - Regular: 2% (was 8%)
    - Supporter or has upvoted within the last 12 hours: 4% (was 16%)
    - Supporter and has upvoted: 6% (was 32%)
- $quickdraw critical bonus multiplier has been changed to 2.89x (was 4.05x)

Version 1.29

- $quickdraw will now benefit from critical hit bonuses if the user is a supporter, 
    or if the user has recently upvoted. (16% chance if upvoted or is an active supporter, 
    32% if upvoted and supported).
- $quickdraw will now let supporters bet an unlimited amount of points.
- $bug has been renamed to $bugreport. This was because users were consistently confusing this for an 
    emotion command (think $hug or $baka).
- If you voteclaim, you are given 5 additional $n bomb uses for the hour.
    This means that if you had 3 $n bomb uses, you will now have 8 instead of 5.
- Fixed a typo with the $slap command.
- Fixed some grammatical errors in the DM that users get when they $redeem a supporter key.
- The "I confirm" message for the NSFW age verification no longer has a length of time in which you must verify. (Was 20 seconds)
- Fixed a bug with a 30/60 day supporter key redemption where it would successfully redeem but also throw an error into chat.
- Removed the days number in the ETA for $exp.

Version 1.28

- $level command deleted. This command has been merged into $exp.
- $exp now displays how much EXP you need to reach the next level, and an approximate time frame to reach that goal.
- $weekly will now have comma seperated numbers.
- $quickdraw [$qd] command added! A new currency game that you can play with Kaguya.
    - You and Kaguya will pull out your pistols and fire at each other as fast as you can!
    - All times are recorded. Whoever is fastest wins!
    - You may bet up to 25,000 points (unlimited for supporters)
    - If you win, you will be rewarded 1.8x your bet.